<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/fragment_sensor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity$HistoryFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical">

        <TextView
                android:id="@+id/headerItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:height="@dimen/listview_horizontal_margin"
                android:text="@string/WifiHotspot"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:width="175dp"/>
        <Switch
                android:id="@+id/switchHotSpot"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/HotspotSwitch"
                android:layout_margin="10dp"/>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider"/>

        <TextView
                android:id="@+id/headerItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:height="@dimen/listview_horizontal_margin"
                android:text="@string/BluetoothSensor"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:width="175dp"/>
        <Switch
                android:id="@+id/switchBluetooth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/BluetoothSwitch"
                android:layout_margin="10dp"/>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="?android:attr/listDivider"/>

        <LinearLayout
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="fill_parent">

            <ListView
                    android:id="@+id/listViewBluetooth"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:transcriptMode="normal">
            </ListView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>