<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/main"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <!-- style="?android:attr/buttonBarStyle" -->


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Switch
                android:id="@+id/switchSending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SensingSwitch"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Switch
                android:id="@+id/switchWakeLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WakeLockSwitch"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/buttonSaveDB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SaveDBButton"/>
    </LinearLayout>
    <!-- List Divider -->

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider"/>

    <!-- ListView (grid_items) -->

    <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

        <ListView
                android:id="@+id/listViewDB"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:transcriptMode="normal">
        </ListView>
    </LinearLayout>

</LinearLayout>